# IEEE2030.5_server_rust

./: .gitignore  Cargo.toml  devCapMsg.html  edevMsg.html  server_cert.pem
certs/: ca.conf  client_cert.pem  client_private_key.pem  serca_cert.pem  serca_cert.srl  serca_private_key.pem  server1.conf  server1.csr  server1_cert.pem  server1_csr.conf  server1_private_key.pem
macros/src/: lib.rs
server_code/: 404.html  Cargo.toml  server_private_key.pem
server_code/src/: main.rs
source_code/: Cargo.toml
source_code/src/: README.md  backend.rs  client.rs  errs.rs  lib.rs  main.rs  packages.rs  server.rs  tcp.rs  tls.rs  wadl.rs
src/: backend.rs  errs.rs  lib.rs  main.rs  sfdi.rs  wadl.rs  xml.rs
