[package]
name = "source_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mbedtls = "0.8.1"
libc = "0.2.0"
arrayvec = "0.7.2"
bitflags = "2.0.0-rc.1"
num-bigint = "0.4.3"
quick-xml = "0.27.0"
serde={version = "1.0", features = ["derive"]}
macros = { path = "../macros" }